# ruggedpod-cli

./: README.md  requirements.txt  setup.cfg
ruggedpod_cli/: __init__.py  cli.py  client.py
