[metadata]
name = ruggedpod-cli
version = 0.1.0
author = OCP
summary = Command line interface to interface the RuggedPod API
url = https://github.com/RuggedPOD/ruggedpod-cli

classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    ruggedpod_cli

[entry_points]
console_scripts =
    ruggedpod = ruggedpod_cli.cli:main

[pytest]
addopts = ruggedpod_cli --pep8
pep8maxlinelength = 120
